fix: check window.ethereum in hooks

--- a/app/src/index.css
+++ b/app/src/index.css
@@ -1,4 +1,4 @@
-@import url('http://fonts.cdnfonts.com/css/plavsky-condensed');
+@import url('https://fonts.cdnfonts.com/css/plavsky-condensed');
 /* @import url('http://fonts.cdnfonts.com/css/alcatraz'); */
 /* @import url('https://www.dafontfree.net/embed/bG9tYm9rLXJlZ3VsYXImZGF0YS84MDQvbC8xODgwMjkvTG9tYm9rLm90Zg'); */
 
